# receiver/app.py
@@ -85,7 +85,7 @@ def reports_damaged_parts(body):
     return NoContent, 201
 
 def health_check():
-    return 200
+    return NoContent, 200
     
 app = connexion.FlaskApp(__name__, specification_dir='')
 app.add_api('openapi.yaml', base_path="/receiver", strict_validation=True, validate_responses=True)
